<resources>
    <string name="app_name">Subby</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Subscriptions</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_title_subscriptions">Subscriptions</string>
    <string name="nav_subs">Subscriptions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datePicker">datePicker</string>

    <string-array name="color_labels_array">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Purple</item>
        <item>White</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_settings">Settings</string>
    <string name="paid_subs">Paid Subs</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="monthly_cost_text">Your Monthly Cost:</string>
    <string name="monthly_due_date">\"Monthly Due Date: \"</string>
    <string name="data_parsing_exception_message">An error occured when parsing the date</string>
    <string name="delete_sub_alert_title">Delete Subscription?</string>
    <string name="cancel_alert_title">Cancel</string>
    <string name="ok_alert_title">OK</string>
    <string name="no_subscription_message">No Subscription</string>
    <string name="enter_sub_name_hint">Enter Subscription Name</string>
    <string name="enter_sub_price_hint">Enter Subscription Price</string>
    <string name="enter_sub_note_hint">Enter Subscription Note</string>
    <string name="pick_date_bttn">Pick Due Date</string>
    <string name="save_subscription_bttn">Save Subscription</string>
    <string name="sub_details_placeholder">Sub details</string>
    <string name="delete_sub_bttn">Delete Subscription</string>
    <string name="sub_name_placeholder">Sub Name</string>
    <string name="price_placeholder">Price</string>
    <string name="notes_placeholder">Notes</string>
    <string name="nav_paid_subs">Paid Subscriptions</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_header_app_title">Subby!</string>
    <string name="due_date">Due Date</string>
    <string name="color_prompt">Choose a Color</string>
    <string name="new_sub_header">Enter a New Subscription</string>
    <string name="turn_notifications_on">Turn Notifications On</string>
    <string name="due_date_placeholder">Due Date Placeholder</string>

</resources>