<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.subs.AddSubActivity">
    <EditText
        android:id="@+id/addSubName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_sub_name_hint"
        android:inputType="textShortMessage"
        android:layout_gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/addSubPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_sub_price_hint"
        android:inputType="numberDecimal"
        android:layout_gravity="center_horizontal"

        />

    <EditText
        android:id="@+id/addSubNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_sub_note_hint"
        android:inputType="textLongMessage"
        android:layout_gravity="center_horizontal"
        />

    <Spinner
        android:id="@+id/addSubColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        />

    <Button
        android:id="@+id/addSubDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/pick_date_bttn"
        android:onClick="showDatePicker"/>

    <Button
        android:id="@+id/saveSub"
        android:text="@string/save_subscription_bttn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="returnSubscription"/>

</LinearLayout>