<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_subs">

    <fragment
        android:id="@+id/nav_subs"
        android:name="com.example.subby.ui.subs.SubsFragment"
        android:label="@string/nav_subs"
        tools:layout="@layout/fragment_subs" />

    <fragment
        android:id="@+id/nav_paid"
        android:name="com.example.subby.ui.paid.PaidFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_paid" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.subby.ui.settings.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>